[add] authorization logic
