# controller/user_controller_impl.go
@@ -2,6 +2,7 @@ package controller
 
 import (
 	"acl-casbin/dto"
+	"acl-casbin/dto/response"
 	"acl-casbin/service"
 	"acl-casbin/utils"
 	"github.com/gin-gonic/gin"
@@ -21,11 +22,12 @@ func NewUserController(userService service.UserService) UserController {
 // @Summary      Find user by username
 // @Description  Get a user object by username
 // @Tags         users
+// @Security AuthBearer
 // @Param        username  path  string  true  "Username"
 // @Failure 400 {object} dto.ErrorResponse
 // @Failure 500 {object} dto.ErrorResponse
 // @Success 200 {object} dto.MessageResponse
-// @Router       /user/username/{username} [get]
+// @Router       /users/username/{username} [get]
 func (u userControllerImpl) FindByUsername(ctx *gin.Context) {
 	username := ctx.Param("username")
 
@@ -41,11 +43,12 @@ func (u userControllerImpl) FindByUsername(ctx *gin.Context) {
 // @Summary      Find user by UID
 // @Description  Get a user by their UID
 // @Tags         users
+// @Security AuthBearer
 // @Param        uid  path  string  true  "User UID"
 // @Failure 400 {object} dto.ErrorResponse
 // @Failure 500 {object} dto.ErrorResponse
 // @Success 200 {object} dto.MessageResponse
-// @Router       /user/uid/{uid} [get]
+// @Router       /users/uid/{uid} [get]
 func (u userControllerImpl) FindByUID(ctx *gin.Context) {
 	uid := ctx.Param("uid")
 	objectID, err := primitive.ObjectIDFromHex(uid)
@@ -61,6 +64,7 @@ func (u userControllerImpl) FindByUID(ctx *gin.Context) {
 // @Summary      Create a new user
 // @Description  Register a new user in the system
 // @Tags         users
+// @Security AuthBearer
 // @Accept       json
 // @Produce      json
 // @Param        data  body  dto.CreateUserRequest  true  "User data"
@@ -68,7 +72,7 @@ func (u userControllerImpl) FindByUID(ctx *gin.Context) {
 // @Failure 400 {object} dto.ErrorResponse
 // @Failure 500 {object} dto.ErrorResponse
 // @Success 200 {object} dto.MessageResponse
-// @Router       /user/create [post]
+// @Router       /users/create [post]
 func (u userControllerImpl) Create(ctx *gin.Context) {
 	var req dto.CreateUserRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
@@ -90,10 +94,11 @@ func (u userControllerImpl) Create(ctx *gin.Context) {
 // @Summary      Get all users
 // @Description  Retrieve a list of all users
 // @Tags         users
+// @Security AuthBearer
 // @Failure 400 {object} dto.ErrorResponse
 // @Failure 500 {object} dto.ErrorResponse
 // @Success 200 {object} dto.MessageResponse
-// @Router       /user/all [get]
+// @Router       /users/all [get]
 func (u userControllerImpl) GetAll(ctx *gin.Context) {
 	users, err := u.userService.GetAll()
 	if err != nil {
@@ -107,6 +112,7 @@ func (u userControllerImpl) GetAll(ctx *gin.Context) {
 // @Summary      Update a user
 // @Description  Update user details by UID (admin or self)
 // @Tags         users
+// @Security AuthBearer
 // @Accept       json
 // @Produce      json
 // @Param        uid   path  string  true  "User UID"
@@ -114,7 +120,7 @@ func (u userControllerImpl) GetAll(ctx *gin.Context) {
 // @Success      200  {object}  dto.UserResponse
 // @Failure 400 {object} dto.ErrorResponse
 // @Failure 500 {object} dto.ErrorResponse
-// @Router       /user/{uid} [put]
+// @Router       /users/{uid} [put]
 func (u userControllerImpl) Update(ctx *gin.Context) {
 	// Check if user is a super admin or update their own data
 	uid := ctx.Param("uid") // uid from URL parameter
@@ -143,11 +149,12 @@ func (u userControllerImpl) Update(ctx *gin.Context) {
 // @Summary      Delete a user
 // @Description  Delete user by UID (admin only)
 // @Tags         users
+// @Security AuthBearer
 // @Param        uid  path  string  true  "User UID"
 // @Failure 400 {object} dto.ErrorResponse
 // @Failure 500 {object} dto.ErrorResponse
 // @Success 200 {object} dto.MessageResponse
-// @Router       /user/{uid} [delete]
+// @Router       /users/{uid} [delete]
 func (u userControllerImpl) Delete(ctx *gin.Context) {
 	uid := ctx.Param("uid")
 	objectID, _ := primitive.ObjectIDFromHex(uid)
@@ -163,18 +170,19 @@ func (u userControllerImpl) Delete(ctx *gin.Context) {
 // @Summary      Get current user info
 // @Description  Get authenticated user information from token
 // @Tags         users
+// @Security AuthBearer
 // @Success      200  {object}  dto.UserResponse
 // @Failure 400 {object} dto.ErrorResponse
 // @Failure 500 {object} dto.ErrorResponse
-// @Router       /user/me [get]
+// @Router       /users/me [get]
 func (u userControllerImpl) Me(ctx *gin.Context) {
 	// Retrieve current user ID from the JWT or session context
-	userID := ctx.GetString("userID")
+	userID := ctx.GetString("user_uid")
 	objectID, err := primitive.ObjectIDFromHex(userID)
 	userResponse, err := u.userService.Me(objectID)
 	if err != nil {
-		ctx.JSON(500, gin.H{"error": "Failed to fetch your user data"})
+		response.New(ctx).Errors(err).MessageID("users.me.get.failed").Status(http.StatusInternalServerError).Dispatch()
 		return
 	}
-	ctx.JSON(200, userResponse)
+	response.New(ctx).Message("اطلاعات به درستی دریافت شد.").MessageID("users.me.get.success").Data(userResponse).Status(http.StatusOK).Dispatch()
 }
