# docs/swagger.json
@@ -658,8 +658,13 @@
                 }
             }
         },
-        "/user/all": {
+        "/users/all": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Retrieve a list of all users",
                 "tags": [
                     "users"
@@ -687,8 +692,13 @@
                 }
             }
         },
-        "/user/create": {
+        "/users/create": {
             "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Register a new user in the system",
                 "consumes": [
                     "application/json"
@@ -739,8 +749,13 @@
                 }
             }
         },
-        "/user/me": {
+        "/users/me": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Get authenticated user information from token",
                 "tags": [
                     "users"
@@ -768,8 +783,13 @@
                 }
             }
         },
-        "/user/uid/{uid}": {
+        "/users/uid/{uid}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Get a user by their UID",
                 "tags": [
                     "users"
@@ -806,8 +826,13 @@
                 }
             }
         },
-        "/user/username/{username}": {
+        "/users/username/{username}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Get a user object by username",
                 "tags": [
                     "users"
@@ -844,8 +869,13 @@
                 }
             }
         },
-        "/user/{uid}": {
+        "/users/{uid}": {
             "put": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Update user details by UID (admin or self)",
                 "consumes": [
                     "application/json"
@@ -897,6 +927,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Delete user by UID (admin only)",
                 "tags": [
                     "users"
